--- a/index.html
+++ b/index.html
@@ -100,11 +100,11 @@
 <script type="importmap">
 {
   "imports": {
-    "react": "https://esm.sh/react@19.2.3",
-    "react/": "https://esm.sh/react@19.2.3/",
-    "react-dom/client": "https://esm.sh/react-dom@19.2.3/client",
-    "lucide-react": "https://esm.sh/lucide-react@0.562.0",
-    "react-dom/": "https://esm.sh/react-dom@19.2.3/",
+    "react": "https://esm.sh/react@18.2.0",
+    "react/": "https://esm.sh/react@18.2.0/",
+    "react-dom/client": "https://esm.sh/react-dom@18.2.0/client",
+    "lucide-react": "https://esm.sh/lucide-react@0.300.0",
+    "react-dom/": "https://esm.sh/react-dom@^19.2.3/",
     "framer-motion": "https://esm.sh/framer-motion@^12.23.26"
   }
 }
