feat: Add initial setup and testing scripts
Introduces `setup.sh` and `test-sprint1.sh` scripts to automate the initial project setup and basic validation. The `index.html` is updated to include essential dependencies for backend and frontend development. This change lays the groundwork for a more robust development workflow.

--- a/index.html
+++ b/index.html
@@ -105,7 +105,37 @@
     "react-dom/client": "https://esm.sh/react-dom@19.2.3/client",
     "lucide-react": "https://esm.sh/lucide-react@0.562.0",
     "react-dom/": "https://esm.sh/react-dom@19.2.3/",
-    "framer-motion": "https://esm.sh/framer-motion@^12.23.26"
+    "framer-motion": "https://esm.sh/framer-motion@^12.23.26",
+    "express": "https://esm.sh/express@^5.2.1",
+    "dotenv/": "https://esm.sh/dotenv@^17.2.3/",
+    "crypto": "https://esm.sh/crypto@^1.0.1",
+    "@prisma/client": "https://esm.sh/@prisma/client@^7.2.0",
+    "@nestjs/jwt": "https://esm.sh/@nestjs/jwt@^11.0.2",
+    "@nestjs/passport": "https://esm.sh/@nestjs/passport@^11.0.5",
+    "html5-qrcode": "https://esm.sh/html5-qrcode@^2.3.8",
+    "next/": "https://esm.sh/next@^16.1.1/",
+    "next": "https://esm.sh/next@^16.1.1",
+    "@vitejs/plugin-react": "https://esm.sh/@vitejs/plugin-react@^5.1.2",
+    "vite": "https://esm.sh/vite@^7.3.0",
+    "path": "https://esm.sh/path@^0.12.7",
+    "@eslint/js": "https://esm.sh/@eslint/js@^9.39.2",
+    "globals": "https://esm.sh/globals@^17.0.0",
+    "@nestjs/common": "https://esm.sh/@nestjs/common@^11.1.11",
+    "typescript-eslint": "https://esm.sh/typescript-eslint@^8.51.0",
+    "axios": "https://esm.sh/axios@^1.13.2",
+    "qrcode": "https://esm.sh/qrcode@^1.5.4",
+    "@nestjs/core": "https://esm.sh/@nestjs/core@^11.1.11",
+    "helmet": "https://esm.sh/helmet@^8.1.0",
+    "passport-jwt": "https://esm.sh/passport-jwt@^4.0.1",
+    "@nestjs/config": "https://esm.sh/@nestjs/config@^4.0.2",
+    "class-validator": "https://esm.sh/class-validator@^0.14.3",
+    "eslint/": "https://esm.sh/eslint@^9.39.2/",
+    "eslint-plugin-prettier/": "https://esm.sh/eslint-plugin-prettier@^5.5.4/",
+    "eslint-config-next/": "https://esm.sh/eslint-config-next@^16.1.1/",
+    "supertest/": "https://esm.sh/supertest@^7.1.4/",
+    "supertest": "https://esm.sh/supertest@^7.1.4",
+    "@nestjs/testing": "https://esm.sh/@nestjs/testing@^11.1.11",
+    "prisma/": "https://esm.sh/prisma@^7.2.0/"
   }
 }
 </script>
